<resources>
    <string name="app_name">GADSLeaderBoard</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders </string>
    <string name="submit">Submit</string>
    <string name="fisrt_name">Fisrt Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="yes">Yes</string>
    <string name="app_bar_image">App Bar Image</string>
    <string name="todo">TODO</string>
    <string name="project_submission">Project Submission</string>
    <string name="close_dialog">close dialog</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission__not_successful">Submission not Successful</string>
</resources>